Buid APK feito.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
       "expo": {
         "name": "eletronovo",
         "scheme": "eletronovo",
-        "slug": "eletronovo",
+        "slug": "rodrigo",
         "version": "1.0.0",
         "orientation": "default",
         "icon": "./assets/icon.png",
