--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
+    "axios": "^1.10.0",
     "expo": "~51.0.21",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
@@ -45,7 +46,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6"
+    "react-native-webview": "^13.8.6",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
