--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-screens": "~3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.8.6",
-    "expo-file-system": "~17.0.1"
+    "expo-file-system": "~17.0.1",
+    "expo-notifications": "~0.28.19",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
