--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "expo": "~51.0.21",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.13.0",
     "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-modules-core": "~1.12.10",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -47,9 +50,7 @@
     "react-native-screens": "~3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.8.6",
-    "expo-file-system": "~17.0.1",
-    "expo-notifications": "~0.28.19",
-    "expo-device": "~6.0.2"
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
